<resources>
    <string name="app_name">Responsive User UI Lib</string>
    <string name="textview_email">Email</string>
    <string name="app_logo">App Logo</string>
    <string name="textview_password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_button">Forgot Password</string>
    <string name="dont_have_account_button">Don\'t have account ? Register Now</string>
    <string name="login_with">or login with</string>
    <string name="login_facebook_button">Facebook</string>
    <string name="login_google_button">Google</string>
</resources>
