<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lnr_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/textview_email"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

  

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint=""
                android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/textview_password"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

       

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:drawableEnd="@drawable/ic_no_view"
                android:hint=""
                android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/forgot_button_lnr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/forgot_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:fontFamily="sans-serif"
                android:text="@string/forgot_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#A3A0A0"
                android:textSize="14sp"
                android:typeface="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="40dp"
            android:background="@drawable/ic_login_button"
            android:fontFamily="sans-serif"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/dont_have_account_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#A3A0A0"
            android:textSize="14sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView_login_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_with"
            android:textAlignment="center"
            android:textColor="#A3A0A0"
            android:textSize="14sp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/social_lnr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_facebook_button"
                android:fontFamily="sans-serif"
                android:gravity="center|right"
                android:text="@string/login_facebook_button"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <Button
                android:id="@+id/login_google_button"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/ic_google_button"
                android:fontFamily="sans-serif"
                android:gravity="center|right"
                android:text="@string/login_google_button"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
